--- a/config.json
+++ b/config.json
@@ -21,7 +21,7 @@
             "trade": {
                 "sleep_time": 1,
                 "items": {
-                    "not_for_trade": [164204164, 30328933, 51243561, 1241181482, 5786026, 1309918, 1310107838, 91675439, 76692331, 1609402609, 5785985, 8853102495, 119040562647325, 2830454962],
+                    "not_for_trade": [164204164, 30328933, 51243561, 1241181482, 5786026, 1309918, 1310107838, 91675439, 76692331, 1609402609, 5785985, 8853102495, 119040562647325, 2830454962, 20573078],
                     "not_accepting": []
                 },
                 "algorithm": {
@@ -69,6 +69,7 @@
         }
     ]
 }
+
 
 
 
